--- a/src/components/LoginBox/LoginBox.css
+++ b/src/components/LoginBox/LoginBox.css
@@ -1,37 +1,37 @@
-.login-box{
+.login-box {
     display: flex;
     flex-direction: column;
     width: 60%;
-    gap:30px
+    gap: 30px
 }
 
-.login-input-section{
+.login-input-section {
     display: flex;
     flex-direction: column;
     font-size: 0.9rem;
-    gap:15px;
+    gap: 15px;
 }
 
-.login-input-section > input{
+.login-input-section>input {
     border: none;
     border-radius: 5px;
     padding: 10px;
     font-size: 1.2rem;
 }
 
-.login-box > button{
+.login-box>button {
     margin-top: 15px;
     border: none;
     border-radius: 5px;
     padding: 10px;
     font-size: 1.2rem;
     height: 50px;
-    background: linear-gradient(45deg, rgba(154,109,252,1) 35%, rgba(100,62,253,1) 100%);
+    background: linear-gradient(45deg, rgba(154, 109, 252, 1) 35%, rgba(100, 62, 253, 1) 100%);
     color: white;
     cursor: pointer;
 }
 
-.login-box > a{
+.login-box>a {
     align-self: center;
     text-align: center;
     text-decoration: none;
